# fswitcher

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/utils/: keys.rs
