[package]
name = "fswitcher"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures-util = "0.3.31"
input = "0.9.1"
libc = "0.2.177"
polling = "3.11.0"
tokio = { version = "1.48.0", features = ["full"] } # "1.48.0"
zbus = { version = "5.12.0", default-features = false, features = [
  "tokio",
  "async-io",
] }
